--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,20 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SecurityController!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		{% if app.user %}
+			<div class="mb-3">
+				You are logged in as
+				{{ app.user.userIdentifier }}<br> Would you like to 
+				<a href="{{ path('app_logout') }}">Logout ?</a>
+			</div>
+		{% else %}
+			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+			<label for="username">Email</label>
+			<input type="email" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+			<label for="password">Password</label>
+			<input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/src/Controller/SecurityController.php</code></li>
-        <li>Your template at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/templates/security/index.html.twig</code></li>
-    </ul>
-</div>
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<button class="btn btn-lg btn-primary" type="submit">
+				Sign in
+			</button>
+		</form>
+	{% endif %}
+
 {% endblock %}
