--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,20 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DashboardController!{% endblock %}
+{% block title %}Hello DashboardController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/src/Controller/DashboardController.php</code></li>
-        <li>Your template at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/templates/dashboard/index.html.twig</code></li>
-    </ul>
-</div>
+	<h1>Bonjour
+		{{app.user.firstName}}</h1>
+	<article>
+		<section>
+			<a href="{{path('app_job_offer_new')}}">Nouvelle candidature ?</a>
+			{% for item in jobs %}
+				<a href="{{path('app_job_offer_show', {'id' : item.id})}}">{{item.title}}</a>
+			{% endfor %}
+		</section>
+		<section>
+			<a href="{{path('app_cover_letter_generate')}}">Générer une lettre de motivation</a>
+			{% for item in letters %}
+				<a href="{{path('app_cover_letter_show', {'id' : item.id})}}">{{item.title}}</a>
+			{% endfor %}
+		</section>
+		<section>
+			<a href="{{path('app_linkedin_generate')}}">Générez un message Linkedin</a>
+			{% for item in messages %}
+				<a href="{{path('app_linkedin_show', {'id' : item.id})}}">{{item.title}}</a>
+			{% endfor %}
+		</section>
+	</article>
 {% endblock %}
