--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -7,6 +7,8 @@
 {% block body %}
 	<section>
 		<div>
+			<a href="{{path('app_cover_letter_generate', {'id':job.id})}}">Générer lettre de motivation</a>
+			<a href="{{path('app_linkedin_generate', {'id':job.id})}}">Générer un message LinkedIn</a>
 			<a href="{{path('app_job_offer_edit', {'id' : job.id})}}">
 				<button>MODIFIER</button>
 			</a>
@@ -39,7 +41,7 @@
 				</p>
 			{% endif %}
 		</div>
-		{% if job.salary is defined %}
+		{% if job.salary is not null %}
 			<p>Salaire :
 				{{job.salary}}
 			</p>
