--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -4,19 +4,21 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Bonjour
-		{{app.user.firstName}}</h1>
-	<article>
-		<section>
-			<a href="{{path('app_job_offer_new')}}">Nouvelle candidature ?</a><br>
-			{% for item in jobs %}
-				<a href="{{path('app_job_offer_show', {'id' : item.id})}}">{{item.title}}</a><br>
-				<div>
+	<h1 class="text-center mt-16">DASHBOARD de
+		{{app.user.firstName|capitalize}}</h1>
+	<div class="w-2/6 h-0.5 bg-orange-400 m-auto mb-8"></div>
+
+	<a href="{{path('app_job_offer_new')}}" class="block">{{ ux_icon('mdi:plus-box-outline', {'class':'h-8 w-8 text-orange-400'}) }}</a><br>
+	<section class="grid grid-cols-2 gap-4 shadow-lg w-5/6 bg-slate-50 py-4 px-8 m-auto ">
+		{% for item in jobs %}
+			<article class="my-4">
+				<a href="{{path('app_job_offer_show', {'id' : item.id})}}" class="text-2xl font-semibold underline">{{item.title}}</a><br>
+				<div class="pl-6">
 					{% for coverLetter in item.coverLetters %}
 						<a href="{{path('app_cover_letter_show', {'id' : coverLetter.id})}}">Lettre de motivation du
 							{{coverLetter.createdAt|date('d/m/Y')}}</a>
 						<a href="{{path('app_cover_letter_delete', {'id' : coverLetter.id})}}">
-							<button>DELETE</button>
+							<button>{{ ux_icon('mdi:trash-can-outline', {'class' : 'h-6 w-6 text-red-500 '}) }}</button>
 						</a>
 						<br>
 					{% endfor %}
@@ -24,12 +26,13 @@
 						<a href="{{path('app_cover_letter_show', {'id' : linkedInMessage.id})}}">Message LinkedIn du
 							{{linkedInMessage.createdAt|date('d/m/Y')}}</a>
 						<a href="{{path('app_cover_letter_delete', {'id' : linkedInMessage.id})}}">
-							<button>DELETE</button>
+							<button>{{ ux_icon('mdi:trash-can-outline', {'class' : 'h-6 w-6 text-red-500 text-center'}) }}</button>
+
 						</a>
 						<br>
-					{% endfor %}
-				</div>
-			{% endfor %}
-		</section>
-	</article>
+					</div>
+				{% endfor %}
+			</article> 
+		{% endfor %}
+	</section>
 {% endblock %}
