--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -5,50 +5,59 @@
 {% endblock %}
 
 {% block body %}
-	<section>
-		<div>
-			<a href="{{path('app_cover_letter_generate', {'id':job.id})}}">Générer lettre de motivation</a>
-			<a href="{{path('app_linkedin_generate', {'id':job.id})}}">Générer un message LinkedIn</a>
-			<a href="{{path('app_job_offer_edit', {'id' : job.id})}}">
-				<button>MODIFIER</button>
-			</a>
-			<a href="{{path('app_job_offer_delete', {'id' : job.id})}}">
-				<button>SUPPRIMER</button>
-			</a>
-		</div>
-		<button>{{job.status}}</button>
-	</section>
-	<section>
-		<h1>{{job.title}}</h1>
-		<h2>{{job.company}}</h2>
-		{% if job.link is not null %}
-			<a href="{{job.link}}">Lien de l'offre</a>
-		{% endif %}
-		{% if job.location is not null %}
-			<h3>Adresse :
-				{{job.location}}
-			</h3>
-		{% endif %}
-		<div>
-			{% if job.contact_person is defined %}
-				<p>Contact :
-					{{job.contact_person}}
+	<article class="flex flex-col justify-center items-center mt-32">
+		<section class="flex gap-4">
+			<div>
+				<p>Génération :</p>
+				<div class="flex justify-center">
+					<a href="{{path('app_cover_letter_generate', {'id':job.id})}}">{{ ux_icon('mdi:letter-l-box-outline', {'class': 'h-8 w-8 text-orange-400'}) }}</a>
+					<a href="{{path('app_linkedin_generate', {'id':job.id})}}">{{ ux_icon('mdi:linkedin', {'class': 'h-8 w-8 text-orange-400'}) }}</a>
+				</div>
+			</div>
+			<div class="mb-auto">
+				<button class="bg-orange-50 p-1 rounded-md cursor-default">{{ ux_icon('mdi:clock-time-ten-outline', {'class': 'h-6 w-6 text-orange-400 inline pr-1'}) }}{{job.status}}</button>
+				<div class="flex justify-center">
+					<a href="{{path('app_job_offer_edit', {'id' : job.id})}}">
+						<button>{{ ux_icon('mdi:pencil', {'class': 'h-6 w-6 text-orange-400'}) }}</button>
+					</a>
+					<a href="{{path('app_job_offer_delete', {'id' : job.id})}}">
+						<button>{{ ux_icon('mdi:trash-can-outline', {'class': 'h-6 w-6 text-red-500'}) }}</button>
+					</a>
+				</div>
+			</div>
+		</section>
+		<section>
+			<h1>{{job.title}}</h1>
+			<h2>{{job.company}}</h2>
+			{% if job.location is not null %}
+				<h4>Adresse :
+					{{job.location}}
+				</h4>
+			{% endif %}
+			{% if job.link is not null %}
+				<a href="{{job.link}}">Lien de l'offre</a>
+			{% endif %}
+			<div>
+				{% if job.contact_person is defined %}
+					<p>Contact :
+						{{job.contact_person}}
+					</p>
+				{% endif %}
+				{% if job.contact_email is defined %}
+					<p>Contact Email:
+						{{job.contact_email}}
+					</p>
+				{% endif %}
+			</div>
+			{% if job.salary is not null %}
+				<p>Salaire :
+					{{job.salary}}
 				</p>
 			{% endif %}
-			{% if job.contact_email is defined %}
-				<p>Contact Email:
-					{{job.contact_email}}
-				</p>
+			{% if job.applicationDate is defined %}
+				<p>Date de postulation :
+					{{job.applicationDate|date('d/m/Y')}}</p>
 			{% endif %}
-		</div>
-		{% if job.salary is not null %}
-			<p>Salaire :
-				{{job.salary}}
-			</p>
-		{% endif %}
-		{% if job.application_date is defined %}
-			<p>Date de postulation :
-				{{job.application_date}}</p>
-		{% endif %}
-	</section>
+		</section>
+	</article>
 {% endblock %}
