--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -12,21 +12,31 @@
 		{% if app.user %}
 			<div class="mb-3">
 				You are logged in as
-				{{ app.user.userIdentifier }}<br> Would you like to 
+				{{ app.user.userIdentifier }}<br>
+				Would you like to
 				<a href="{{ path('app_logout') }}">Logout ?</a>
 			</div>
 		{% else %}
-			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-			<label for="username">Email</label>
-			<input type="email" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-			<label for="password">Password</label>
-			<input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-
-			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-			<button class="btn btn-lg btn-primary" type="submit">
-				Sign in
-			</button>
-		</form>
-	{% endif %}
+			<h1 class="text-center mt-24">Connectez-vous</h1>
+			<div class="flex flex-col justify-center m-auto p-4 rounded-md shadow-md bg-slate-50 w-80">
+				<div>
+					<label class="block text-sm font-medium text-gray-700" for="username">Email</label>
+					<input class="block w-full mt-1 p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" type="email" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
+				</div>
+				<div>
+					<label class="block text-sm font-medium text-gray-700" for="password">Password</label>
+					<input class="block w-full mt-1 p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+				</div>
+				<div>
+					<input class="block w-full mt-1 p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+				</div>
+				<div>
+					<button class="inline-flex mt-2 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500" class="btn btn-lg btn-primary" type="submit">
+						Se connecter
+					</button>
+				</div>
+			</div>
+		{% endif %}
+	</form>
 
 {% endblock %}
