--- a/templates/job_offer/new.html.twig
+++ b/templates/job_offer/new.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="my-10 p-4 rounded-md shadow-md bg-slate-50 w-80">
+	<div class="my-10 p-4 rounded-md shadow-md bg-slate-50 w-80 m-auto">
 		{{ form_errors(formJobOffer) }}
 		{{ form_start(formJobOffer) }}
 		{{ form_row(formJobOffer.status) }}
