--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Hello HomeController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>C:/Users/nilki/Desktop/Cours/SYMFONY/profilau_top/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+	{% if app.user %}
+		<h1 class="mt-60 text-5xl text-orange-600 text-center">Bon retour sur Profilau.top {{app.user.firstName|capitalize}}</h1>
+		<div class="w-3/6 h-0.5 bg-orange-400 m-auto mb-8"></div>
+		<p class="w-2/3 font-medium text-2xl m-auto text-center">Vous pouvez facilement gérer vos candidatures, générer automatiquement vos lettres de motivation personnalisées et préparer vos messages LinkedIn en un clin d'œil. Simplifiez votre recherche d’emploi et mettez toutes les chances de votre côté pour décrocher le poste de vos rêves !</p>
+	{% else %}
+		<h1 class="mt-60 text-5xl text-orange-800 text-center">Bienvenue sur Profilau.top</h1>
+		<div class="w-3/6 h-0.5 bg-orange-400 m-auto mb-8"></div>
+		<p class="w-2/3 font-medium text-2xl m-auto text-center">Votre assistant personnel pour simplifier la gestion de vos candidatures ! Générez automatiquement des lettres de motivation sur-mesure et des messages LinkedIn professionnels en quelques clics. Optimisez votre recherche d'emploi et laissez-nous vous accompagner vers le succès !</p>
+	{% endif %}
 {% endblock %}
