--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -2,10 +2,12 @@
 	<nav class="flex flex-row justify-around">
 		<div class="flex flex-row gap-2">
 			<a href="{{path('app_home')}}">{{ ux_icon('mdi:home-variant', {'class' : 'h-8 w-8 bg-white rounded-md  text-orange-400  hover:scale-125 transition-transform ease-in-out'}) }}</a>
+			{% if app.user is not null %}
 			<a href="{{path('app_dashboard')}}">{{ ux_icon('mdi:view-dashboard', {'class' : 'h-8 w-8 bg-white rounded-md text-orange-400 hover:scale-125 transition-transform ease-in-out'}) }}</a>
 			<a href="{{path('app_kanban')}}">{{ ux_icon('mdi:sitemap', {'class' : 'h-8 w-8 bg-white rounded-md text-orange-400 hover:scale-125 transition-transform ease-in-out'}) }}</a>
 			<a href="{{path('app_job_offer_all')}}">{{ ux_icon('mdi:archive', {'class' : 'h-8 w-8 bg-white rounded-md text-orange-400 hover:scale-125 transition-transform ease-in-out'}) }}</a>
 			<a href="{{path('app_job_offer_new')}}">{{ ux_icon('mdi:archive-plus', {'class' : 'h-8 w-8 bg-white rounded-md text-orange-400 hover:scale-125 transition-transform ease-in-out'}) }}</a>
+		{% endif %}
 		</div>
 		<div class="flex flex-row gap-2">
 			{% if app.user is not null %}
