--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -18,7 +18,7 @@
 			</div>
 		{% else %}
 			<h1 class="text-center mt-24">Connectez-vous</h1>
-			<div class="flex flex-col justify-center m-auto p-4 rounded-md shadow-md bg-slate-50 w-80">
+			<div class="flex flex-col justify-center mt-4 m-auto p-4 rounded-md shadow-md bg-slate-50 w-80">
 				<div>
 					<label class="block text-sm font-medium text-gray-700" for="username">Email</label>
 					<input class="block w-full mt-1 p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" type="email" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
