--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -31,7 +31,7 @@
 					<input class="block w-full mt-1 p-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 				</div>
 				<div>
-					<button class="inline-flex mt-2 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500" class="btn btn-lg btn-primary" type="submit">
+					<button id="btnSubmit" class="inline-flex mt-2 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500" class="btn btn-lg btn-primary" type="submit">
 						Se connecter
 					</button>
 				</div>
